[gd_scene load_steps=26 format=3 uid="uid://cahdl3jnst2yt"]

[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="1_6bp64"]
[ext_resource type="Script" uid="uid://ddm72khuma57w" path="res://Scripts/stage.gd" id="2_344ge"]
[ext_resource type="PackedScene" uid="uid://dqbtu4ohfqxk5" path="res://Trash/trash.tscn" id="3_ynf5e"]
[ext_resource type="PackedScene" uid="uid://cxb712l8kv0fs" path="res://Trash/spillage.tscn" id="4_hptm8"]
[ext_resource type="PackedScene" uid="uid://con0fs7vgqu2" path="res://Scenes/UIWall.tscn" id="5_344ge"]
[ext_resource type="PackedScene" uid="uid://cgfmfdpdqj2h0" path="res://Scenes/win_walker.tscn" id="5_fdnlq"]
[ext_resource type="PackedScene" uid="uid://br4jhqp1ngkt5" path="res://Scenes/Character.tscn" id="6_6iyac"]
[ext_resource type="PackedScene" uid="uid://co8jvehwkfchd" path="res://Scenes/TrashBin.tscn" id="6_ynf5e"]
[ext_resource type="PackedScene" uid="uid://c3hlwjoe57qvy" path="res://Scenes/Bag.tscn" id="7_fdnlq"]
[ext_resource type="PackedScene" uid="uid://bkde2pyy52ree" path="res://Scenes/isalnd.tscn" id="8_d1ilt"]
[ext_resource type="PackedScene" uid="uid://c3u0uht2nfia5" path="res://Scenes/BG_music.tscn" id="9_ynf5e"]
[ext_resource type="PackedScene" uid="uid://dm1yfec6p612v" path="res://Scenes/ThankYouMessageViewport.tscn" id="11_jkdf5"]
[ext_resource type="ArrayMesh" uid="uid://dss7ndegj0ies" path="res://Assets/CSGs/model.obj" id="11_k12tt"]
[ext_resource type="PackedScene" uid="uid://e1p74862nvxg" path="res://Scenes/yacht_animation.tscn" id="12_6iyac"]
[ext_resource type="PackedScene" uid="uid://cfjvnnl7t3srr" path="res://Scenes/instructions_guide.tscn" id="12_wsu2k"]
[ext_resource type="PackedScene" uid="uid://b8okvsgjtrmfe" path="res://Scenes/GameplayinstructionsUI.tscn" id="16_k12tt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 3
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_7dm0k"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(2.695322e-06, 0.77885365, 0.8784801, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ig7tw"]

[sub_resource type="BoxMesh" id="BoxMesh_ig7tw"]
size = Vector3(17, 0.1, 19)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(0.31287417, 0.85228145, 0.3142541, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_344ge"]
size = Vector3(0.5, 3.8, 20)

[node name="Main" type="Node3D"]

[node name="StartXR" parent="." instance=ExtResource("1_6bp64")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, -1.4963508, 0)
shadow_enabled = true

[node name="Stage" type="Node3D" parent="."]
script = ExtResource("2_344ge")
trash_pile = ExtResource("3_ynf5e")
liquid_spill = ExtResource("4_hptm8")

[node name="winWalker" parent="Stage" instance=ExtResource("5_fdnlq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.437528, 0, 0)
visible = false

[node name="FloorWater" type="StaticBody3D" parent="Stage"]
collision_layer = 7

[node name="Floor" type="MeshInstance3D" parent="Stage/FloorWater"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
mesh = SubResource("PlaneMesh_7dm0k")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ig7tw")

[node name="FloorCollider" type="CollisionShape3D" parent="Stage/FloorWater"]
shape = SubResource("WorldBoundaryShape3D_ig7tw")

[node name="UI Wall" parent="Stage" instance=ExtResource("5_344ge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.5, 0)

[node name="TrashBin" parent="Stage" instance=ExtResource("6_ynf5e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 0.75, 2.25)

[node name="SpawnFloor" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0.035, 0)
visible = false
mesh = SubResource("BoxMesh_ig7tw")
surface_material_override/0 = SubResource("StandardMaterial3D_h2yge")

[node name="SpawnTimer" type="Timer" parent="Stage"]
autostart = true

[node name="Boundary Wall" type="StaticBody3D" parent="Stage"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/Boundary Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.060415, 1.3912354, -0.046142578)
shape = SubResource("BoxShape3D_344ge")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Stage/Boundary Wall"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 1.3, -10.166)
shape = SubResource("BoxShape3D_344ge")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Stage/Boundary Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.85083, 1.3912354, -0.046142578)
shape = SubResource("BoxShape3D_344ge")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Stage/Boundary Wall"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 1.3, 9.996334)
shape = SubResource("BoxShape3D_344ge")

[node name="Islands" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.3628788)

[node name="Isalnd" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.856598, 0, 34.51246)

[node name="Isalnd2" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.420383, 0, 29.183922)

[node name="Isalnd3" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.66223, 0, -18.71068)

[node name="Isalnd4" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.45821, -1.9073486e-06, -28.793375)

[node name="Isalnd5" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.06079, 0, -26.393936)

[node name="Isalnd6" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.90974, 0, 17.417389)

[node name="Isalnd7" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.641388, 0, -40.177757)

[node name="Isalnd8" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -56.132202, 0.05573368, 50.42875)

[node name="Isalnd9" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -50.279892, -0.43053484, -48.748146)

[node name="Isalnd10" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -44.54589, -0.43053484, -50.800117)

[node name="Isalnd11" parent="Stage/Islands" instance=ExtResource("8_d1ilt")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -49.43805, -0.43053484, -53.93711)

[node name="YachtAnimation" parent="Stage" instance=ExtResource("12_6iyac")]
transform = Transform3D(-1.3113416e-07, 0, -3, 0, 3, 0, 3, 0, -1.3113416e-07, 12, 0, 0)
visible = false

[node name="ThankYouMessage" parent="Stage" instance=ExtResource("11_jkdf5")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 9.935566, 1.7445247, 0)
visible = false

[node name="Rocks" type="Node3D" parent="Stage"]

[node name="Model" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.20749, 0.4291185, 25.022503)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model2" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.774267, 0.4291185, 25.613445)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model3" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.457796, 0.4291185, 24.857077)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model4" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -29.119959, 0.7001798, 27.542645)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model5" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.734879, 0.4291185, -20.576094)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model6" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.568317, 0.4291185, -19.709309)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model7" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.804653, 0.4291185, -20.28059)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model8" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.225845, 0.4291185, -39.275845)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model9" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.70362, 0.4291185, -38.39421)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model10" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.28862, 0.4291185, -39.442062)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model11" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 48.822697, 3.717564, 48.983967)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model12" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 47.28088, 0.4291185, -48.55868)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model13" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 47.710125, 0.4291185, -47.652325)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model14" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 48.674423, 0.4291185, -47.432083)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model15" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 49.605343, 0.429119, -47.652596)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model16" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 47.18987, 0.4291185, -49.574917)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Model17" type="MeshInstance3D" parent="Stage/Rocks"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 49.71934, 1.8275199, -50.0578)
mesh = ExtResource("11_k12tt")
skeleton = NodePath("../../..")

[node name="Instructions Guide" parent="Stage" instance=ExtResource("12_wsu2k")]
transform = Transform3D(-1.3113417e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.3113417e-08, -9, 0.9, -2.3)

[node name="XROrigin3D" parent="." instance=ExtResource("6_6iyac")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0.3953882, 0)

[node name="BagStatic" parent="." instance=ExtResource("7_fdnlq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.514989, 0.21059155, -1.274296)
collision_layer = 2
collision_mask = 2

[node name="AudioStreamPlayer" parent="." instance=ExtResource("9_ynf5e")]

[node name="Gameplay instructions" parent="." instance=ExtResource("16_k12tt")]
transform = Transform3D(-1.3113417e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.3113417e-08, -9, 0.9, -3.849)

[connection signal="timeout" from="Stage/SpawnTimer" to="Stage" method="_on_spawn_timer_timeout"]
